# mefai-risk-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quick_start.py
mefai_risk/: __init__.py  cli.py  config.py
mefai_risk/data/: __init__.py  dataset.py  features.py  fetcher.py  onchain.py
mefai_risk/models/: __init__.py  attention.py  tft.py
mefai_risk/portfolio/: __init__.py  manager.py
mefai_risk/training/: __init__.py  trainer.py
tests/: test_basic.py
