[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mefai-risk-ai"
version = "0.1.0"
description = "AI-powered cryptocurrency risk assessment using Temporal Fusion Transformer on Binance market data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mefai-dev"},
]
keywords = ["crypto", "risk", "deep-learning", "pytorch", "binance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
    "scikit-learn>=1.2",
    "ta>=0.10",
    "scipy>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
mefai-risk = "mefai_risk.cli:cli"

[tool.setuptools.packages.find]
include = ["mefai_risk*"]
